# tracing-perfetto-sdk

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/layer/: Cargo.toml
crates/layer/examples/: native-layer.rs  perfetto-dump-trace.rs  sdk-layer.rs
crates/layer/src/: debug.rs  debug_annotations.rs  error.rs  ffi_utils.rs  flavor.rs  ids.rs  init.rs  layer.rs  lib.rs  native_layer.rs  sdk_layer.rs
crates/layer/tests/: kitchen_sink.rs
crates/schema/: Cargo.toml  build.rs
crates/schema/protos/: README.md
crates/schema/src/: lib.rs
crates/sys/: Cargo.toml  build.rs
crates/sys/perfetto-sdk/: README.md
crates/sys/src/: lib.rs  perfetto-bindings.cc  perfetto-bindings.h
crates/sys/tests/: forget_to_init.rs  happy_path.rs  invalid_config.rs
