[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"

[workspace.dependencies]
tracing-perfetto-sdk-layer = { version = "0.7.0", path = "crates/layer" }
tracing-perfetto-sdk-schema = { version = "0.7.0", path = "crates/schema" }
tracing-perfetto-sdk-sys = { version = "0.7.0", path = "crates/sys" }

anyhow = "1.0.90"
bytes = "1.8.0"
cxx = { version = "1.0.129", features = ["c++17"] }
cxx-build = { version = "1.0.129", features = ["parallel"] }
futures = "0.3.31"
pbjson = "0.7.0"
pbjson-build = "0.7.0"
pbjson-types = "0.7.0"
prost = "0.13.3"
prost-build = "0.13.3"
serde = "1.0.211"
serde_yaml = "0.9.34"
thiserror = "1.0.64"
thread-id = "4.2.2"
thread_local = "1.1.8"
tokio = { version = "1.41.0", features = ["rt"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
