[package]
name = "tracing-perfetto-sdk-schema"
description = "Perfetto Prost protobuf bindings used by tracing-perfetto-sdk"
license = "Apache-2.0"
repository = "https://github.com/modal-labs/tracing-perfetto-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
pbjson.workspace = true
pbjson-types.workspace = true
prost.workspace = true
serde.workspace = true

[build-dependencies]
anyhow.workspace = true
pbjson-build.workspace = true
prost-build.workspace = true
