[package]
name = "tracing-perfetto-sdk-sys"
description = "Native C++ bindings for the Perfetto SDK used by tracing-perfetto-sdk"
license = "Apache-2.0"
repository = "https://github.com/modal-labs/tracing-perfetto-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
cxx.workspace = true
futures = { workspace = true, optional = true }

[build-dependencies]
anyhow.workspace = true
cxx-build.workspace = true

[features]
async = ["dep:futures"]
